tests/simple_tests/syntaxError/missingParentheses.py
def f(a):
	print(a)

print 42